Adding support for JDK 20 javac.